<resources>
    <string name="app_name">ReqResJava</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="sign_off">Cerrar sesion</string>
    <string name="logIn">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="getinto">Ingresar</string>

    <string name="not_have_account">No tienes una cuenta. Registrate</string>
    <string name="create_account">Crear cuenta</string>
    <string name="occurred_error">Ha ocurrido un error. Usuario / contraseña incorrectos</string>
    <string name="successful_login">Login exitoso</string>
    <string name="successful_account">Cuenta creada con éxito.</string>
    <string name="menu_search">Buscar</string>

</resources>