<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.view.LoginActivity">

        <TextView
            android:id="@+id/textViewApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_huge"
            android:text="@string/app_name"
            style="@style/encabezado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_huge"
            android:text="@string/logIn"
            style="@style/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApp" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginEnd="@dimen/space_big"
            android:background="@drawable/btn_white"
            android:elevation="@dimen/space_avg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLogIn"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/editPassword"
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginEnd="@dimen/space_big"
            android:background="@drawable/btn_white"
            android:elevation="@dimen/space_avg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/space_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/txtGetInto"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/space_big"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginEnd="@dimen/space_big"
            android:background="@drawable/btn_white"
            android:backgroundTint="@color/purple_500"
            android:elevation="@dimen/space_avg"
            android:gravity="center"
            android:text="@string/getinto"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <TextView
            android:id="@+id/textViewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_huge"
            android:text="@string/not_have_account"
            style="@style/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
